tests/sumo/extended/vaporizer/errors/id_empty/errors.sumo
Error: Attribute 'id' in definition of a vaporizer is empty.
Quitting (on error).
